@@ -11,7 +11,6 @@ Tâches de Maximilien :
         - fonction pour signer un texte. (finir)
         - fonction pour tester la signature d'un texte. (finir)
 
-
 Tâches d'Achraf :
 	- Boite de dialogue pour sélectionner la clé publique
 	- Boite de dialogue pour demander le mot de passe (de la clé privée)
