@@ -1,0 +1,3 @@
+<!ENTITY title "FireGPG - Private key password">
+<!ENTITY description "Enter your private key password :">
+<!ENTITY check_save_password "Save password for this session">
